removed bot padding from top content to fix bug on iphone7

--- a/css/index.css
+++ b/css/index.css
@@ -302,6 +302,11 @@ footer .copyright {
     margin: 0;
   }
 }
+@media (max-width: 667px) {
+  .top-container .top-content {
+    padding: 0;
+  }
+}
 .top-container .top-content h1 {
   font-size: 3rem;
   text-shadow: 0.1rem 0.1rem black;
@@ -328,7 +333,7 @@ footer .copyright {
 }
 @media (max-width: 667px) {
   .top-container .top-content button {
-    margin: 3rem 0 0 0;
+    margin: 0;
   }
 }
 .mid-container {
