--- a/less/home-page.less
+++ b/less/home-page.less
@@ -37,6 +37,10 @@
             margin: 0;
         }
 
+        @media @iphone7 {
+            padding: 0;
+        }
+
         h1 {
             font-size: 3rem;
             text-shadow: 0.1rem 0.1rem black;
@@ -64,7 +68,7 @@
             cursor: pointer;
 
             @media @iphone7 {
-                margin: 3rem 0 0 0;
+                margin: 0;
             }
           }
 
